--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,11 @@ install:
 
   - if [ "$CXX" == "clang++" -a "$CPP14" == "0" ]; then CXX=clang++-3.3; fi
   
-  - pushd .
-  - cd ..
-  - git clone https://github.com/unittest-cpp/unittest-cpp
-  - "cd unittest-cpp; cmake .; make all"
-  - popd
+  #- pushd .
+  #- cd ..
+  #- git clone https://github.com/unittest-cpp/unittest-cpp
+  #- "cd unittest-cpp; cmake .; make all"
+  #- popd
 
 # command to run tests
 script: 
